# TaxiRide-Windflow

./: CMakeLists.txt  Makefile
includes/: accumulator.hpp  builders.hpp  filter.hpp  flatmap.hpp  key_farm.hpp  key_farm_gpu.hpp  kf_nodes.hpp  map.hpp  meta_utils.hpp  ordering_node.hpp  pane_farm.hpp  pane_farm_gpu.hpp  pipegraph.hpp  sink.hpp  source.hpp  splitting_emitter.hpp  standard_nodes.hpp  wf_nodes.hpp  win_farm.hpp  win_farm_gpu.hpp  win_mapreduce.hpp  win_mapreduce_gpu.hpp  win_seq.hpp  win_seq_gpu.hpp  window.hpp  wm_nodes.hpp
src/: Makefile  NycGeoUtils.hpp  SlidingArrivalCount.cpp  TotalArrivalCount.cpp  operators.hpp  taxi.hpp  tuplas.hpp
